@@ -3,14 +3,13 @@ package com.supermartijn642.chunkloaders.capability;
 import com.supermartijn642.chunkloaders.ChunkLoadersConfig;
 import com.supermartijn642.chunkloaders.extensions.ChunkLoadersLevel;
 import net.minecraft.core.BlockPos;
+import net.minecraft.core.UUIDUtil;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.ListTag;
-import net.minecraft.nbt.Tag;
 import net.minecraft.world.level.ChunkPos;
 import net.minecraft.world.level.Level;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * Created 26/06/2022 by SuperMartijn642
@@ -103,7 +102,7 @@ public class ChunkLoadingCapability {
         ListTag loadedChunksPerPlayerTag = new ListTag();
         for(Map.Entry<UUID,Set<ChunkPos>> entry : this.loadedChunksPerPlayer.entrySet()){
             CompoundTag playerTag = new CompoundTag();
-            playerTag.putUUID("player", entry.getKey());
+            playerTag.putIntArray("player", UUIDUtil.uuidToIntArray(entry.getKey()));
             playerTag.putLongArray("chunks", entry.getValue().stream().mapToLong(ChunkPos::toLong).toArray());
             loadedChunksPerPlayerTag.add(playerTag);
         }
@@ -114,8 +113,8 @@ public class ChunkLoadingCapability {
 
     public void read(CompoundTag compound){
         // Read chunkLoaderCacheMap
-        ListTag chunkLoaderCachesTag = compound.getList("chunkLoaderCaches", Tag.TAG_COMPOUND);
-        chunkLoaderCachesTag.stream().map(CompoundTag.class::cast).map(ChunkLoaderCache::read).forEach(
+        ListTag chunkLoaderCachesTag = compound.getListOrEmpty("chunkLoaderCaches");
+        chunkLoaderCachesTag.stream().filter(CompoundTag.class::isInstance).map(CompoundTag.class::cast).map(ChunkLoaderCache::read).forEach(
             cache -> {
                 this.chunkLoaderCacheMap.put(cache.chunkLoaderPos, cache);
                 this.chunkLoadersPerChunk.putIfAbsent(cache.chunkPos, new HashSet<>());
@@ -134,11 +133,12 @@ public class ChunkLoadingCapability {
         );
 
         // Read loadedChunksPerPlayer
-        ListTag loadedChunksPerPlayerTag = compound.getList("loadedChunksPerPlayer", Tag.TAG_COMPOUND);
-        loadedChunksPerPlayerTag.stream().map(CompoundTag.class::cast).forEach(
+        ListTag loadedChunksPerPlayerTag = compound.getListOrEmpty("loadedChunksPerPlayer");
+        loadedChunksPerPlayerTag.stream().filter(CompoundTag.class::isInstance).map(CompoundTag.class::cast).forEach(
             playerTag -> {
-                UUID player = playerTag.getUUID("player");
-                Collection<ChunkPos> chunks = Arrays.stream(playerTag.getLongArray("chunks")).mapToObj(ChunkPos::new).collect(Collectors.toList());
+                //noinspection OptionalGetWithoutIsPresent
+                UUID player = UUIDUtil.uuidFromIntArray(playerTag.getIntArray("player").get());
+                Collection<ChunkPos> chunks = Arrays.stream(playerTag.getLongArray("chunks").orElseGet(() -> new long[0])).mapToObj(ChunkPos::new).toList();
                 this.loadedChunksPerPlayer.putIfAbsent(player, new HashSet<>());
                 this.loadedChunksPerPlayer.get(player).addAll(chunks);
                 for(ChunkPos chunk : chunks){
